--- a/src/styles/functions/_common.scss
+++ b/src/styles/functions/_common.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 $html-font-size: 16px;
 @function stripUnit($value) {
   @return $value / ($value * 0 + 1);
@@ -6,6 +8,7 @@ $html-font-size: 16px;
 /// px to rem converter
 /// @param {string} $pxValue  Pixel value to be converted to rem ex:16px
 @function pxToRem($pxValue) {
-  @return #{stripUnit($pxValue) / stripUnit($html-font-size)}rem;
+  @return #{math.div(stripUnit($pxValue), stripUnit($html-font-size))}rem;
+  // @return #{$pxValue / $html-font-size}rem;
   //@return #{$pxValue}px;
 }
