commititing www folder for github deployment

--- a/src/styles/variables/_color.scss
+++ b/src/styles/variables/_color.scss
@@ -4,6 +4,7 @@ $black: #000000;
 $light-gray: #C4C4C4;
 
 $primary-color: rgb(212, 242, 255);
+$primary-color-dark: #8bcce9;
 $secondary-color: #e3c9f2;
 
 $theme-color: $primary-color;
