--- a/src/components/text-masking-component/text-masking-component.scss
+++ b/src/components/text-masking-component/text-masking-component.scss
@@ -12,7 +12,7 @@
   margin: pxToRem(-8);
   padding-bottom: pxToRem(48);
   @include screen(desktop) {
-    padding: pxToRem(24) pxToRem(24) pxToRem(48) pxToRem(24);
+    padding: 0 pxToRem(24) pxToRem(48) pxToRem(24);
   }
   &__header {
     align-self: center;
@@ -21,6 +21,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    @include screen(desktop) {
+      padding: pxToRem(8) 0;
+    }
   }
   &__main {
     margin-top: pxToRem(8);
@@ -31,11 +34,13 @@
         &__phases {
           flex-grow: 3;
           padding: pxToRem(8);
+          @include inputText();
         }
         &__delimiter {
           flex-grow: 1;
           padding: pxToRem(8);
-          margin-left: -2px;
+          margin-left: -4px;
+          @include inputText();
         }
       }
     }
@@ -57,11 +62,6 @@
       display: none;
       justify-content: center;
       align-items: center;
-      button {
-        padding: pxToRem(8);
-        margin: pxToRem(8) 0;
-        border-radius: pxToRem(4);
-      }
       @include screen(desktop) {
         display: flex;
       }
@@ -77,7 +77,8 @@
       &--input-area {
         padding: pxToRem(8);
         min-height: pxToRem(200);
-        border-radius: pxToRem(4) pxToRem(4) 0 0;
+        @include inputText();
+
         @include screen(desktop) {
           flex: 1 1 50%;
           min-height: pxToRem(400);
@@ -99,7 +100,7 @@
         max-height: pxToRem(200);
         overflow-wrap: break-word;
         overflow-y: auto;
-        border-radius: 0 0 pxToRem(4) pxToRem(4);
+        border-radius: pxToRem(4);
         @include screen(desktop) {
           flex: 1 1 50%;
           min-height: pxToRem(400);
@@ -139,7 +140,7 @@
   font-size: $font-size-button;
   cursor: pointer;
   &:focus {
-    box-shadow: 0 2px 3px -1px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 3px -1px $secondary-color;
   }
   @include screen(tablet) {
     padding: pxToRem(8) pxToRem(24);
