--- a/src/styles/functions/_common.scss
+++ b/src/styles/functions/_common.scss
@@ -2,7 +2,7 @@
 
 $html-font-size: 16px;
 @function stripUnit($value) {
-  @return $value / ($value * 0 + 1);
+  @return math.div($value, $value * 0 + 1);
 }
 
 /// px to rem converter
