--- a/src/styles/mixins/_common.scss
+++ b/src/styles/mixins/_common.scss
@@ -31,3 +31,16 @@
   background-color: $theme-color;
   background-image: $theme-image;
 }
+
+@mixin inputText {
+  display: inline-block;
+  border: pxToRem(2) solid $primary-color;
+  background-color: $white;
+  border-radius: $border-radius;
+  box-sizing: border-box;
+  font-size: $font-size;
+  &:focus {
+    outline: none;
+    border: pxToRem(2) solid $primary-color-dark;
+  }
+}
